--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "generator-sequences",
   "version": "1.0.1",
   "description": "A Sequence datatype, to make working with generator expressions simpler.",
-  "main": "index.js",
+  "exports": "index.js",
   "types": "index.d.ts",
   "dependencies": {
     "typescript": "next"
